--- a/Exercicio - Correlacao.ipynb
+++ b/Exercicio - Correlacao.ipynb
@@ -432,7 +432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Como a correlação é acima de $\\sqrt{(0.6)^2}$ podemos dizer que é alta.**"
+    "**Como a correlação é acima de $\\sqrt{(\\pm0.6)^2}$ podemos dizer que é alta.**"
    ]
   },
   {
